# flask-celery-example

./: .gitignore  Dockerfile  MAIl_ACCOUNT.env  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run-redis.sh
docker/: celery.dockerfile  docker-compose.yml  flask.dockerfile  redis.dockerfile
templates/: index.html
